--- a/client/src/index.html
+++ b/client/src/index.html
@@ -9,11 +9,12 @@
 </head>
 <body> 
   <div class="shell">
-    <div class="text">
-
-    </div>
+    <div class="text"></div>
     <ul class="object">
-      <li class="player"><span class="self">1</span> <div class="dir"></div></li>
+      <li class="player self">
+        <span></span>
+        <div class="dir"></div>
+      </li>
     </ul>
   </div>
 </body>
