--- a/test.html
+++ b/test.html
@@ -10,8 +10,14 @@
 
 </body>
 <script>
-  document.addEventListener('keydown', function (e) {
-    console.log(e.keyCode);
-  })
+  // document.addEventListener('keydown', function (e) {
+  //   console.log(e.keyCode);
+  // })
+  function test() {}
+  test.test1 = function() {
+    console.log('666');
+  }
+
+  test.test1()
 </script>
 </html>
