--- a/client/src/index.html
+++ b/client/src/index.html
@@ -15,6 +15,7 @@
         <span></span>
         <div class="dir"></div>
       </li>
+      <li class="bullet" style="display: none;"></li>
     </ul>
   </div>
 </body>
