--- a/client/src/index.html
+++ b/client/src/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>复刻小游戏</title>
+  <title>多人WEB小游戏</title>
 
 </head>
 <body> 
