feat: client 改 vite

--- a/client/index.html
+++ b/client/index.html
@@ -18,6 +18,7 @@
       <li class="bullet" style="display: none;"></li>
     </ul>
   </div>
+  <script type="module" src="/src/index.js"></script>
 </body>
 
 </html>
