feat: 本地对象改完

--- a/client/index.html
+++ b/client/index.html
@@ -10,13 +10,8 @@
 <body> 
   <div class="shell">
     <div class="text"></div>
-    <ul class="object">
-      <li class="player self">
-        <span></span>
-        <div class="dir"></div>
-      </li>
-      <li class="bullet" style="display: none;"></li>
-    </ul>
+    <ul class="tank-obj object"></ul>
+    <ul class="bullet-obj object"></ul>
   </div>
   <script type="module" src="/src/index.js"></script>
 </body>
