feat：代理和草丛

--- a/client/index.html
+++ b/client/index.html
@@ -10,6 +10,11 @@
 <body> 
   <div class="shell">
     <div class="text"></div>
+    <ul class="grass">
+      <li class="grass1"></li>
+      <li class="grass2"></li>
+      <li class="grass3"></li>
+    </ul>
     <ul class="tank-obj object"></ul>
     <ul class="bullet-obj object"></ul>
   </div>
