feat：添加说明文字

--- a/client/index.html
+++ b/client/index.html
@@ -6,10 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>多人WEB小游戏</title>
 
-</head>
+</head>    
 <body> 
   <div class="shell">
-    <div class="text"></div>
+    <ul class="text">
+      <li>空格移动</li>
+      <li>鼠标左键射击</li>
+    </ul>
     <ul class="grass">
       <li class="grass1"></li>
       <li class="grass2"></li>
