feat: 适配移动端

--- a/client/index.html
+++ b/client/index.html
@@ -3,15 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta content="width=device-width, initial-scale=1, user-scalable=0;" name="viewport" />
   <title>多人WEB小游戏</title>
 
 </head>    
 <body> 
   <div class="shell">
     <ul class="text">
-      <li>空格移动</li>
-      <li>鼠标左键射击</li>
+      <li>电脑：空格移动，鼠标左键射击</li>
+      <li>移动端：点击屏幕，移动并射击</li>
     </ul>
     <ul class="grass">
       <li class="grass1"></li>
