feat:新的死亡提示

--- a/client/index.html
+++ b/client/index.html
@@ -21,6 +21,12 @@
     <ul class="tank-obj object"></ul>
     <ul class="bullet-obj object"></ul>
   </div>
+  <div class="modal">
+    <div class='modal-content'>
+      <h1>死</h1>
+      <p><a href="">重新加入战斗</a></p>
+    </div>
+  </div>
   <script type="module" src="/src/index.js"></script>
 </body>
 
