feat: 增加延迟显示

--- a/client/index.html
+++ b/client/index.html
@@ -20,6 +20,7 @@
     </ul>
     <ul class="tank-obj object"></ul>
     <ul class="bullet-obj object"></ul>
+    <p class="latency">latency</p>
   </div>
   <div class="modal">
     <div class='modal-content'>
