--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta content="width=device-width, initial-scale=1, user-scalable=0;" name="viewport" />
-  <title>多人WEB小游戏</title>
+  <title>多人坦克大战</title>
 
 </head>    
 <body> 
